--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -10,8 +10,22 @@ h1 {
     font-size: 3.125rem;
 }
 
+h2 {
+    font-size: 	2.625rem;
+    font-weight: 300;
+}
+
 a {
     color: aquamarine;
     text-decoration: underline;
-    
+
+}
+
+p {
+    font-size: 	1.3125rem;
+    color: gray;
+}
+
+.footer {
+    text-align: right;
 }
